third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/partial_eq/unknown_variant_attribute.rs
#[derive(derive_more::PartialEq)]
enum Enum {
    #[partial_eq(unknown)]
    Bar { i: i32 },
}

fn main() {}
